src/objects/PSA_Combined_Expense_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>PSA_Attachment_Ids__c</fullName>
        <description>List of attachments to include in a combined expense receipt document</description>
        <inlineHelpText>List of attachments to include in a combined expense receipt document</inlineHelpText>
        <label>Attachment Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Billing Event (if applicable)</description>
        <inlineHelpText>Related Billing Event (if applicable)</inlineHelpText>
        <label>Billing Event</label>
        <referenceTo>pse__Billing_Event__c</referenceTo>
        <relationshipLabel>PSA Combined Expense Receipts</relationshipLabel>
        <relationshipName>PSA_Combined_Expense_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Combined_Receipt_URL__c</fullName>
        <description>The URL to the combined receipt document</description>
        <inlineHelpText>The URL to the combined receipt document</inlineHelpText>
        <label>Combined Receipt URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Expense Report (if applicable)</description>
        <inlineHelpText>Related Expense Report (if applicable)</inlineHelpText>
        <label>Expense Report</label>
        <referenceTo>pse__Expense_Report__c</referenceTo>
        <relationshipLabel>PSA Combined Expense Receipts</relationshipLabel>
        <relationshipName>PSA_Combined_Expense_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Long_Name__c</fullName>
        <description>Contains a longer version of the url link name (max of 255 characters)</description>
        <inlineHelpText>Contains a longer version of the url link name (max of 255 characters)</inlineHelpText>
        <label>Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Source_Object_Id__c</fullName>
        <description>The source object id that the combined expense receipt document will eventually be attached to</description>
        <inlineHelpText>The source object id that the combined expense receipt document will eventually be attached to</inlineHelpText>
        <label>Source Object Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PSA Combined Expense Receipt</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Combined Expense Receipts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA Combined Expense Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>